# marco

./: Cargo.toml  Makefile  README.md
src/: cli.rs  config.rs  main.rs  parser.rs  runner.rs  test_types.rs  types.rs  util.rs
tests/: basic.marco.md  hello.marco.html  hello.marco.md  helloworld.marco.md  multi-line.marco.md  multi-tests.marco.md  python.marco.md  x.marco.md  z.marco.md
